--- a/gb/19/9/5/n11501471.md
+++ b/gb/19/9/5/n11501471.md
@@ -1,54 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/szzd0/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/szzd0/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/szzd0/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/szzd0/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/szzd0/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/szzd0/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/szzd0/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/szzd0/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/szzd0/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/szzd0/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/szzd0/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/szzd0/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÖÐÇïÇ° ¸ÛÈËÅÉËÍ400¸ö×ÔÖÆÔÂ±ý»¥Ïà¹ÄÀø</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2014/08/140804072931100615-600x400.jpg" />
-<h6>ÖÐÇï½ÚÁÙ½ü£¬Ïã¸ÛÍøÃñÃâ·ÑÅÉËÍ400¸öÐ´ÓÐ¡°¹â¸´Ïã¸Û¡¢Ê±´ú¸ïÃü¡¢²»³·²»É¢¡±µÈ×ÖÑùµÄ±ùÆ¤ÔÂ±ý£¬»¥Ïà¹ÄÀø¡£Í¼Îª¸÷Ê½±ùÆ¤ÔÂ±ýÊ¾ÒâÍ¼¡££¨Óà¸Ö£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zeqdou3554/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zeqdou3554/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/zeqdou3554/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/zeqdou3554/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/zeqdou3554/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸­ç§‹å‰ æ¸¯äººæ´¾é€400ä¸ªè‡ªåˆ¶æœˆé¥¼äº’ç›¸é¼“åŠ±</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/08/140804072931100615-600x400.jpg" />
+<h6>ä¸­ç§‹èŠ‚ä¸´è¿‘ï¼Œé¦™æ¸¯ç½‘æ°‘å…è´¹æ´¾é€400ä¸ªå†™æœ‰â€œå…‰å¤é¦™æ¸¯ã€æ—¶ä»£é©å‘½ã€ä¸æ’¤ä¸æ•£â€ç­‰å­—æ ·çš„å†°çš®æœˆé¥¼ï¼Œäº’ç›¸é¼“åŠ±ã€‚å›¾ä¸ºå„å¼å†°çš®æœˆé¥¼ç¤ºæ„å›¾ã€‚ï¼ˆä½™é’¢ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ05ÈÕÑ¶¡¿ÖÐÇï½ÚÁÙ½ü£¬Ïã¸ÛÍøÃñÃâ·ÑÅÉËÍ400¸öÐ´ÓÐ¡°¹â¸´Ïã¸Û¡¢Ê±´ú¸ïÃü¡¢²»³·²»É¢¡±µÈ×ÖÑùµÄ±ùÆ¤<a href="https://github.com/szzd0/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md">ÔÂ±ý</a>£¬»¥Ïà¹ÄÀø¡£ÁíÍâ£¬ÒòÎªÖ§³Ö·´ËÍÖÐ£¬Ïã¸ÛÖªÃû¡°<a href="https://github.com/szzd0/djy/blob/master/gb/tag/%E5%86%B0%E7%9A%AE%E6%9C%88%E9%A5%BC.md">±ùÆ¤ÔÂ±ý</a>¡±½üÆÚ±»´óÂ½µçÉÌÆ½Ì¨È«ÏßÏÂ¼Ü¡£</p>
-<p>Ïã¸ÛÆ»¹ûÈÕ±¨±¨µ¼£¬Ïã¸ÛÍøÃñ³ÂÏÈÉúÔ­±¾´òËã×öÐ©Ð´ÓÐ¡°¹â¸´Ïã¸Û Ê±´ú¸ïÃü¡±×ÖÑùµÄ<a href="https://github.com/szzd0/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md">ÔÂ±ý</a>ËÍ¸øÉí±ßºÃÓÑ£¬È´·´Ó¦ÈÈÁÒ£¬ÓÚÊÇ°Ñ´ËÏë·¨·ÖÏíµ½ÍøÉÏ£¬·¢ÆðËÍÔÂ±ý»î¶¯£¬ÎªÏã¸ÛÈË¼ÓÓÍ´òÆø¡£</p>
-<p>Ëæ¼´£¬¸Ã»î¶¯ÒýÆðÖÚ¶àÍøÃñ¹Ø×¢£¬½öÁ½ÈÕ£¬ÔÚÍøÃñÌá¹©µÄ°ì¹«ÊÒºÍ×¡´¦£¬´ó¼ÒÒ»Æð¶¯ÊÖ×öºÃÁË400¸ö<a href="https://github.com/szzd0/djy/blob/master/gb/tag/%E5%86%B0%E7%9A%AE%E6%9C%88%E9%A5%BC.md">±ùÆ¤ÔÂ±ý</a>¡£ÔÂ±ý¿ÚÎ¶·Ö±ðÎªÄÌ»Æ¡¢ºì¶¹¡¢×ÏÊí¡¢Àõ×Ó£»²¢¿ÌÓÐ¡°¹â¸´Ïã¸Û¡¢Ê±´ú¸ïÃü¡¢²»³·²»É¢¡¢ÐÖµÜÅÀÉ½¡¢Ïã¸Û¼ÓÓÍ¡±µÈ×ÖÑù¡£</p>
-<p>²ÎÓëÆäÖÐµÄÁõÌ«Ëµ£¬×÷ÎªÂèÂè£¬Ã¿´Î¿´µ½ÐÂÎÅ¶¼¸Ðµ½ºÜÐÄÍ´£¬ºÍ´ó¼ÒÒ»Æð×öÕâÖÖÒå¹¤»î¶¯£¬¿ÉÒÔ»¥Ïà½²³öÐÄÀïµÄÏë·¨£»µ±µÃµ½ËûÈËÖ§³ÖÊ±£¬ÇéÐ÷±ã²»»áÄÇÃ´µÍÂä£¬¡°ÒòÎªÎÒÃÇÔÚÒ»Æð¡±¡£</p>
-<p>8ÔÂ31ÈÕ£¬³ÂÏÈÉúºÍ³ÂÌ«Ì«£¬ÍÆ×ÅÈý´óÏä×öºÃµÄÔÂ±ýÇ°ÍùÖÐ»·¡£¿ÉÊÇÃ»Ïëµ½¾¯·½ÓÚÏÂÎçÔÚ½ðÖÓÏÄí¨µÀÊ©·Å´ßÀáµ¯£¬Á½ÈË×îºó¾ö¶¨¸ÄÈ¥Ïã¸ÛÕ¾£¬ºóÀ´Ñ¡ÔñÔÚÏã¸ÛÕ¾ÓëÖÐ»·Õ¾Ö®¼äµÄÍ¨µÀÉÏÅÉ·¢ÔÂ±ý¡£400¸öÔÂ±ý£¬²»×ã10·ÖÖÓ¾ÍÅÉ·¢Íê¡£</p>
-<p>ÓÐÄÃµ½ÔÂ±ýµÄÍøÃñËµ£¬¿´µ½ÔÂ±ýÉÏÐ´×Å¡°²»³·²»É¢¡±£¬¡°Õâ¸ö¾ÍÊÇÎÒÃÇÒªµÄ¶«Î÷¡±¡°ºÃ¸Ð¶¯¡±¡£</p>
-<p>ÖÐÇï½ÚÁÙ½ü£¬³ÂÏÈÉúËµ£¬Ï£Íû´ó¼Ò²»ÊÜÉË¡¢²»±»²¶£»ÖÐÇï½ÚÈËÔÂÁ½ÍÅÔ²£¬ÆëÉÏÆëÂä£¬Ïã¸ÛÈË¼ÓÓÍ£¡</p>
-<p>ÔÚ¸ÛÈË×öÔÂ±ý»¥Ïà¹ÄÀøÖ®Ç°£¬Ïã¸ÛÖªÃû¡°±ùÆ¤ÔÂ±ý¡±´´°ìÈËÖ®×Ó<a href="https://github.com/szzd0/djy/blob/master/gb/tag/%E9%83%AD%E5%8B%87%E7%BB%B4.md">¹ùÓÂÎ¬</a>£¬Òò8ÔÂ28ÈÕÔÚÁ³Êé·¢±íÖ§³Ö¡°·´ËÍÖÐ¡±ÑÔÂÛ£¬Æä¹«Ë¾²úÆ·¡°´ó°à±ùÆ¤ÔÂ±ý¡±±»´óÂ½µçÉÌÆ½Ì¨ÌÔ±¦¡¢¾©¶«µÈÈ«ÏßÏÂ¼Ü¡£</p>
-<p>ÖÐ¹²ºíÉàÈËÃñÈÕ±¨Î¢²©9ÔÂ1ÈÕ»¹·¢ÎÄ¡°´ó°àÔÂ±ý£¬ÕæÒª±ùÁ¹ÁË¡±´«µÝ´òÑ¹Ö®Òâ¡£#</p>
-<p>ÔðÈÎ±à¼­£ºÏôÂÉÉú</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ05æ—¥è®¯ã€‘ä¸­ç§‹èŠ‚ä¸´è¿‘ï¼Œé¦™æ¸¯ç½‘æ°‘å…è´¹æ´¾é€400ä¸ªå†™æœ‰â€œå…‰å¤é¦™æ¸¯ã€æ—¶ä»£é©å‘½ã€ä¸æ’¤ä¸æ•£â€ç­‰å­—æ ·çš„å†°çš®<ahref="https://github.com/zeqdou3554/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md#1">æœˆé¥¼</a>ï¼Œäº’ç›¸é¼“åŠ±ã€‚å¦å¤–ï¼Œå› ä¸ºæ”¯æŒåé€ä¸­ï¼Œé¦™æ¸¯çŸ¥åâ€œ<ahref="https://github.com/zeqdou3554/djy/blob/master/gb/tag/%E5%86%B0%E7%9A%AE%E6%9C%88%E9%A5%BC.md#1">å†°çš®æœˆé¥¼</a>â€è¿‘æœŸè¢«å¤§é™†ç”µå•†å¹³å°å…¨çº¿ä¸‹æž¶ã€‚</p>
+<p>é¦™æ¸¯è‹¹æžœæ—¥æŠ¥æŠ¥å¯¼ï¼Œé¦™æ¸¯ç½‘æ°‘é™ˆå…ˆç”ŸåŽŸæœ¬æ‰“ç®—åšäº›å†™æœ‰â€œå…‰å¤é¦™æ¸¯ æ—¶ä»£é©å‘½â€å­—æ ·çš„<ahref="https://github.com/zeqdou3554/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md#1">æœˆé¥¼</a>é€ç»™èº«è¾¹å¥½å‹ï¼Œå´ååº”çƒ­çƒˆï¼ŒäºŽæ˜¯æŠŠæ­¤æƒ³æ³•åˆ†äº«åˆ°ç½‘ä¸Šï¼Œå‘èµ·é€æœˆé¥¼æ´»åŠ¨ï¼Œä¸ºé¦™æ¸¯äººåŠ æ²¹æ‰“æ°”ã€‚</p>
+<p>éšå³ï¼Œè¯¥æ´»åŠ¨å¼•èµ·ä¼—å¤šç½‘æ°‘å…³æ³¨ï¼Œä»…ä¸¤æ—¥ï¼Œåœ¨ç½‘æ°‘æä¾›çš„åŠžå…¬å®¤å’Œä½å¤„ï¼Œå¤§å®¶ä¸€èµ·åŠ¨æ‰‹åšå¥½äº†400ä¸ª<ahref="https://github.com/zeqdou3554/djy/blob/master/gb/tag/%E5%86%B0%E7%9A%AE%E6%9C%88%E9%A5%BC.md#1">å†°çš®æœˆé¥¼</a>ã€‚æœˆé¥¼å£å‘³åˆ†åˆ«ä¸ºå¥¶é»„ã€çº¢è±†ã€ç´«è–¯ã€æ —å­ï¼›å¹¶åˆ»æœ‰â€œå…‰å¤é¦™æ¸¯ã€æ—¶ä»£é©å‘½ã€ä¸æ’¤ä¸æ•£ã€å…„å¼Ÿçˆ¬å±±ã€é¦™æ¸¯åŠ æ²¹â€ç­‰å­—æ ·ã€‚</p>
+<p>å‚ä¸Žå…¶ä¸­çš„åˆ˜å¤ªè¯´ï¼Œä½œä¸ºå¦ˆå¦ˆï¼Œæ¯æ¬¡çœ‹åˆ°æ–°é—»éƒ½æ„Ÿåˆ°å¾ˆå¿ƒç—›ï¼Œå’Œå¤§å®¶ä¸€èµ·åšè¿™ç§ä¹‰å·¥æ´»åŠ¨ï¼Œå¯ä»¥äº’ç›¸è®²å‡ºå¿ƒé‡Œçš„æƒ³æ³•ï¼›å½“å¾—åˆ°ä»–äººæ”¯æŒæ—¶ï¼Œæƒ…ç»ªä¾¿ä¸ä¼šé‚£ä¹ˆä½Žè½ï¼Œâ€œå› ä¸ºæˆ‘ä»¬åœ¨ä¸€èµ·â€ã€‚</p>
+<p>8æœˆ31æ—¥ï¼Œé™ˆå…ˆç”Ÿå’Œé™ˆå¤ªå¤ªï¼ŒæŽ¨ç€ä¸‰å¤§ç®±åšå¥½çš„æœˆé¥¼å‰å¾€ä¸­çŽ¯ã€‚å¯æ˜¯æ²¡æƒ³åˆ°è­¦æ–¹äºŽä¸‹åˆåœ¨é‡‘é’Ÿå¤æ‚«é“æ–½æ”¾å‚¬æ³ªå¼¹ï¼Œä¸¤äººæœ€åŽå†³å®šæ”¹åŽ»é¦™æ¸¯ç«™ï¼ŒåŽæ¥é€‰æ‹©åœ¨é¦™æ¸¯ç«™ä¸Žä¸­çŽ¯ç«™ä¹‹é—´çš„é€šé“ä¸Šæ´¾å‘æœˆé¥¼ã€‚400ä¸ªæœˆé¥¼ï¼Œä¸è¶³10åˆ†é’Ÿå°±æ´¾å‘å®Œã€‚</p>
+<p>æœ‰æ‹¿åˆ°æœˆé¥¼çš„ç½‘æ°‘è¯´ï¼Œçœ‹åˆ°æœˆé¥¼ä¸Šå†™ç€â€œä¸æ’¤ä¸æ•£â€ï¼Œâ€œè¿™ä¸ªå°±æ˜¯æˆ‘ä»¬è¦çš„ä¸œè¥¿â€â€œå¥½æ„ŸåŠ¨â€ã€‚</p>
+<p>ä¸­ç§‹èŠ‚ä¸´è¿‘ï¼Œé™ˆå…ˆç”Ÿè¯´ï¼Œå¸Œæœ›å¤§å®¶ä¸å—ä¼¤ã€ä¸è¢«æ•ï¼›ä¸­ç§‹èŠ‚äººæœˆä¸¤å›¢åœ†ï¼Œé½ä¸Šé½è½ï¼Œé¦™æ¸¯äººåŠ æ²¹ï¼</p>
+<p>åœ¨æ¸¯äººåšæœˆé¥¼äº’ç›¸é¼“åŠ±ä¹‹å‰ï¼Œé¦™æ¸¯çŸ¥åâ€œå†°çš®æœˆé¥¼â€åˆ›åŠžäººä¹‹å­<ahref="https://github.com/zeqdou3554/djy/blob/master/gb/tag/%E9%83%AD%E5%8B%87%E7%BB%B4.md#1">éƒ­å‹‡ç»´</a>ï¼Œå› 8æœˆ28æ—¥åœ¨è„¸ä¹¦å‘è¡¨æ”¯æŒâ€œåé€ä¸­â€è¨€è®ºï¼Œå…¶å…¬å¸äº§å“â€œå¤§ç­å†°çš®æœˆé¥¼â€è¢«å¤§é™†ç”µå•†å¹³å°æ·˜å®ã€äº¬ä¸œç­‰å…¨çº¿ä¸‹æž¶ã€‚</p>
+<p>ä¸­å…±å–‰èˆŒäººæ°‘æ—¥æŠ¥å¾®åš9æœˆ1æ—¥è¿˜å‘æ–‡â€œå¤§ç­æœˆé¥¼ï¼ŒçœŸè¦å†°å‡‰äº†â€ä¼ é€’æ‰“åŽ‹ä¹‹æ„ã€‚#</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šè§å¾‹ç”Ÿ</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/5/n11501471.htm">ÖÐÇïÇ° ¸ÛÈËÅÉËÍ400¸ö×ÔÖÆÔÂ±ý»¥Ïà¹ÄÀø</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499845.htm">Ó¢¹ú»¶Ó­ÁÖÖ£³·Òý¶ÉÌõÀý ´Ù¸Û¸®ÓëÈËÃñ¶Ô»°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499397.htm">¹ú»áÁìÐä£ºÈôÖÐ¹²ÕòÑ¹Ïã¸Û ½«´Ù´¨ÆÕÇ¿Ó²»Ø»÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11500002.htm">ÍõÓÑÈº£ºÁÖÖ£Â¼ÒôÓë¸Û°Ä°ìÉùÒô²î¾àÎªºÎ´ó£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499441.htm">¸Û¸®³·»ØÐÞÀý ÃñÕó£ºÎå´óËßÇóÈ±Ò»²»¿É</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499439.htm">ÖÜÏþ»Ô£ºÁÖÖ£ÕýÊ½³·»ØÐÞÀý ±±¾©´òÊ²Ã´Ö÷Òâ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499587.htm">Ê§ÐÅÓÚÃñ ÁÖÖ£³·»Ø¡¶ÌÓ·¸ÌõÀý¡·ÒÑÌ«³Ù</a></li>
-> <li><a href="https://github.com/szzd0/djy/blob/master/gb/19/9/4/n11498197.md">ÁÖÖ£¹«²¼£ºÕýÊ½³·»ØÐÞÀý ¾ÜÉè¶ÀÁ¢µ÷²é</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504007.htm">ÍõáªÉ½Ïã¸Û¡°Ãð»ð¡± ´«´ïÏ°½üÆ½ÃÜÁî</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11502628.htm">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²É¿¶¯ÍøÃñ³ðºÞÏã¸Û³¢¿à¹û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11504414.htm">Ä¬¿Ë¶ûÀî¿ËÇ¿Ì¸Ïã¸Û ÖÐ¹²¹ÙÃ½È«ÆÁ±Î</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11502617.htm">ÃÀICE´þ39ÇÖ·¸ÈËÈ¨ÏÓ·¸ º¬4ÃûÖÐ¹²¼ÆÉú¹ÙÔ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/1/n11492269.htm">Ò»¸öÕæÊµµÄ¡°ÁÄÕ«¹ÊÊÂ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/24/n11475066.htm">¡°ÓÐÐ©Õ®»¹²»Íê¡± ¶«Î÷·½Éñ»°´«Ëµ£ºÇáÉúÓÐ×ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11482345.htm">Ã»ÓÐÈË»á¸æËßÄãµÄ·çË®ÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/23/n11404263.htm">ºªµ¦£¬³ÉÓïµÄ¹ÊÏç£¨Îå£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499822.htm">ÉñÃØÂ¼ÒôÁ÷³ö ¹ÙÔ±Ð¹Â¶ÖÐ¹²ÏÝÍ³ÖÎÎ£»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11500371.htm">×¨·ÃÏôÈôÔª:ÖÐ¹²ËÀ¿ÄÃ³Ò×Õ½»òÁî¸Û±Ò±ä·ÏÖ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11500907.htm">ÊÜÃ³Ò×Õ½ÖØ´´ ÖÐ¹²¼±³Å¾­¼Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11499974.htm">¡¾Ê®×ÖÂ·¿Ú¡¿ÖÐ¹²¼ÙÐÂÎÅÓßÂÛÕ½ºäÕ¨Ïã¸Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/3/n11496806.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐÃÀ9ÔÂÌ¸ÅÐÄÑ¶¨£¿Ë«·½µ×ÏßÔÚÄÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11502718.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÐÞÀý³·»Ø ¸ÛÈËÎªºÎÈÔÉÏ½Ö£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11501725.htm">µ¿ÉãÓ°Ê¦ÁÖµÂ²®¸ñ ÕÂ×ÓâùÔø±»ÅÄÏÂÂúÁ³ÈÑÉï°ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/4/n11499673.htm">ÁÖÖ£Ðû²¼³·»ØÌõÀý Îé¼ÒÇ«ÒÔ¹é»¹³¬ÊÐÔßÎï×÷±È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11500116.htm">·¶çâç÷ÉîÒ¹Ë¤ÉË ÏÂ°ÍÂ¶³öÈ±¿Ú·ì15Õë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11500904.htm">Ì¨Å®ÐÇ°¢ÅµÏ²»³Ì¥ Í¸Â¶³õÆÚÎ²×µÍ´µ½Ö»ÄÜÌÉ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/5/n11502076.htm">Íõ×ÚÒ¢µ½Ì«×ÓÕ¾Â·¼À Í´³âÁÖÖ£³·ÐÞÀýÖ®ÊµÖÊ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/19/9/4/n11499397.md#1">å›½ä¼šé¢†è¢–ï¼šè‹¥ä¸­å…±é•‡åŽ‹é¦™æ¸¯ å°†ä¿ƒå·æ™®å¼ºç¡¬å›žå‡»</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/19/9/4/n11499439.md#1">å‘¨æ™“è¾‰ï¼šæž—éƒ‘æ­£å¼æ’¤å›žä¿®ä¾‹ åŒ—äº¬æ‰“ä»€ä¹ˆä¸»æ„ï¼Ÿ</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/19/9/4/n11499441.md#1">æ¸¯åºœæ’¤å›žä¿®ä¾‹ æ°‘é˜µï¼šäº”å¤§è¯‰æ±‚ç¼ºä¸€ä¸å¯</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/19/9/4/n11499587.md#1">å¤±ä¿¡äºŽæ°‘ æž—éƒ‘æ’¤å›žã€Šé€ƒçŠ¯æ¡ä¾‹ã€‹å·²å¤ªè¿Ÿ</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/szzd0/djy/blob/master/gb/19/9/5/n11501471.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/szzd0/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/szzd0/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/szzd0/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/szzd0/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd0/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">æ°¸æ’çš„è§è¯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šâ€œå…­å››å± åŸŽâ€çš„å‡ ä¸ªé—®é¢˜</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">æ²³åŒ—ä¸€ä½ç”µå™¨ç»´ä¿®å¸ˆæ— æ‚”çš„ä¿¡å¿µ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/16/n11943195.md#1">æ—¥åª’ä½“äººè¯„å°æ¹¾é˜²ç–«2å¤§åŠŸè‡£ ç¬¬ä¸€åç«Ÿéžé™ˆæ—¶ä¸­</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/17/n11946346.md#1">ã€çŽ°åœºè§†é¢‘ã€‘å¬ä¿¡ä¸­å…±è°Žè¨€ è¿”äº¬äººæŒ¤çˆ†æœºåœº</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/17/n11945722.md#1">ã€ç¿»å¢™å¿…çœ‹ã€‘å®˜åª’åå¸¸ æ‰¹èµµç«‹åšâ€œä¸‹ä½œâ€ï¼Ÿ</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/17/n11948259.md#1">ä¸­å…±æ’¤é©»åŽç¾Žåª’è®°è€…å·¥ä½œè¯ è“¬ä½©å¥¥å¼ºçƒˆå›žåº”</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/17/n11946544.md#1">å°æ­Œä»”æˆå›½å®å°å‡¤ä»™ç—…é€ äº«å¯¿80å²ã€€</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/17/n11947993.md#1">ä¼Šæœ—éšçž’ç–«æƒ… æ¥è‡ªä¼Šæœ—çš„å°æ¹¾å¥³å©¿çˆ†çœŸç›¸</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹ä¸­å…±ç—…æ¯’</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/11/n11933369.md#1">æ¸…æœå­¦å£«ä¸‰å¥‡æ¢¦ æ˜¯è°æŽŒæ¡ä»–çš„ä¸€ç”Ÿï¼Ÿ</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/11/n11933376.md#1">åƒ§äººç²¾å‡†é¢„è¨€ ç…çŠä¸‰å­©ç«¥ç«Ÿæ˜¯â€œçœŸä¸€å“â€</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/13/1/31/n3790016.md#1">ç±³å¼€æœ—åŸºç½—Michelangeloï¼ˆ1ï¼‰æ—©å¹´ç”Ÿæ¶¯</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/17/n11946008.md#1">åäººçº·ç¡®è¯Š ã€ŠæƒåŠ›æ¸¸æˆã€‹ã€Šå¤ä»‡è€…ã€‹æ¼”å‘˜æŸ“ç–«</a></li>
+<li><a href="https://github.com/zeqdou3554/djy/blob/master/gb/20/3/12/n11936269.md#1">ç¼˜è‡ªå¤©ä¸Šæ¥ è¿™å¯¹å¤«å¦»æ˜¯æ˜Ÿå®˜ä¸‹å‡¡</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/5/n11501471.htm">ä¸­ç§‹å‰ æ¸¯äººæ´¾é€400ä¸ªè‡ªåˆ¶æœˆé¥¼äº’ç›¸é¼“åŠ±</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zeqdou3554/djy/blob/master/gb/19/9/5/n11501471.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/zeqdou3554/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/zeqdou3554/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/zeqdou3554/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zeqdou3554/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
